# dz10_django

./: pyproject.toml
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: views.py
hw_project/quotes/templates/quotes/: base.html  index.html
