[tool.poetry]
name = "dz10-django"
version = "0.1.0"
description = ""
authors = ["ElenaPolkhovaS <148061037+ElenaPolkhovaS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pymongo = "^4.6.3"
bson = "^0.5.10"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
